<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/party_card"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="450dp"
            android:layout_marginRight="10dp"
            android:elevation="5dp" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

        <TextView
            android:id="@+id/TimerText"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="60dp"
            android:text="@string/timer_t"
            android:textSize="24sp" />

        <android.support.v7.widget.CardView
            android:id="@+id/timer_card"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="100dp"
            android:elevation="5dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="50dp"
                android:text="@string/hours_t"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/hours_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="250dp"
                android:layout_marginTop="50dp"
                android:text="@string/minutes_t"
                android:textSize="18sp" />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="185dp"
            android:text="@string/drink_sum_t"
            android:textSize="24sp" />

        <android.support.v7.widget.CardView
            android:id="@+id/drink_sum_card"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="225dp"
            android:layout_marginRight="10dp"
            android:elevation="5dp">

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="290dp"
                android:layout_marginTop="130dp"
                android:text="@string/quick_add_t" />

            <TextView
                android:id="@+id/LastDrinkText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/last_drink_t"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="150dp"
                android:text="@string/total_drinks_t"
                android:textSize="18sp" />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="410dp"
            android:text="@string/party_overview_t"
            android:textSize="24sp" />

    </FrameLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view" />


</android.support.v4.widget.DrawerLayout>